Better full-width menu with correct z-index to make links clickable still

--- a/sites/all/themes/gms_theme/css/styles.css
+++ b/sites/all/themes/gms_theme/css/styles.css
@@ -773,6 +773,8 @@ th {
   margin-right: -20px;
   padding-left: 0;
   padding-right: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .layout-4col:before {
@@ -786,199 +788,30 @@ th {
   clear: both;
 }
 
-.layout-4col__full, .layout-4col__left-content, .layout-4col__right-content, .layout-4col__left-sidebar, .layout-4col__right-sidebar, .layout-4col__first-left-sidebar, .layout-4col__second-left-sidebar, .layout-4col__col-1, .layout-4col__col-2, .layout-4col__col-3, .layout-4col__col-4, .layout-4col__col-x {
-  clear: both;
-  padding-left: 20px;
-  padding-right: 20px;
+.layout-4col__right-content {
   float: left;
-  width: 100%;
+  width: 80%;
+  margin-left: 20%;
+  margin-right: -100%;
+}
+
+[dir="rtl"] .layout-4col__right-content {
+  float: right;
+  margin-right: 20%;
+  margin-left: -100%;
+}
+
+.layout-4col__left-sidebar {
+  float: left;
+  width: 20%;
   margin-left: 0%;
   margin-right: -100%;
 }
 
-[dir="rtl"] .layout-4col__full, [dir="rtl"] .layout-4col__left-content, [dir="rtl"] .layout-4col__right-content, [dir="rtl"] .layout-4col__left-sidebar, [dir="rtl"] .layout-4col__right-sidebar, [dir="rtl"] .layout-4col__first-left-sidebar, [dir="rtl"] .layout-4col__second-left-sidebar, [dir="rtl"] .layout-4col__col-1, [dir="rtl"] .layout-4col__col-2, [dir="rtl"] .layout-4col__col-3, [dir="rtl"] .layout-4col__col-4, [dir="rtl"] .layout-4col__col-x {
+[dir="rtl"] .layout-4col__left-sidebar {
   float: right;
   margin-right: 0%;
   margin-left: -100%;
-}
-
-@media (min-width: 777px) {
-  .layout-4col {
-    margin-left: -12px;
-    margin-right: -13px;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .layout-4col:before {
-    content: "";
-    display: table;
-  }
-  .layout-4col:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  [dir="rtl"] .layout-4col {
-    margin-left: -13px;
-    margin-right: -12px;
-  }
-  .layout-4col__full, .layout-4col__left-content, .layout-4col__right-content, .layout-4col__left-sidebar, .layout-4col__right-sidebar {
-    float: left;
-    width: 100%;
-    margin-left: 0%;
-    margin-right: -100%;
-    padding-left: 12px;
-    padding-right: 13px;
-  }
-  [dir="rtl"] .layout-4col__full, [dir="rtl"] .layout-4col__left-content, [dir="rtl"] .layout-4col__right-content, [dir="rtl"] .layout-4col__left-sidebar, [dir="rtl"] .layout-4col__right-sidebar {
-    float: right;
-    margin-right: 0%;
-    margin-left: -100%;
-  }
-  [dir="rtl"] .layout-4col__full, [dir="rtl"] .layout-4col__left-content, [dir="rtl"] .layout-4col__right-content, [dir="rtl"] .layout-4col__left-sidebar, [dir="rtl"] .layout-4col__right-sidebar {
-    padding-left: 13px;
-    padding-right: 12px;
-  }
-  .layout-4col__first-left-sidebar, .layout-4col__col-1, .layout-4col__col-3, .layout-4col__col-x:nth-child(2n + 1) {
-    float: left;
-    width: 50%;
-    margin-left: 0%;
-    margin-right: -100%;
-    padding-left: 12px;
-    padding-right: 13px;
-  }
-  [dir="rtl"] .layout-4col__first-left-sidebar, [dir="rtl"] .layout-4col__col-1, [dir="rtl"] .layout-4col__col-3, [dir="rtl"] .layout-4col__col-x:nth-child(2n + 1) {
-    float: right;
-    margin-right: 0%;
-    margin-left: -100%;
-  }
-  [dir="rtl"] .layout-4col__first-left-sidebar, [dir="rtl"] .layout-4col__col-1, [dir="rtl"] .layout-4col__col-3, [dir="rtl"] .layout-4col__col-x:nth-child(2n + 1) {
-    padding-left: 13px;
-    padding-right: 12px;
-  }
-  .layout-4col__second-left-sidebar, .layout-4col__col-2, .layout-4col__col-4, .layout-4col__col-x:nth-child(2n) {
-    clear: none;
-    float: left;
-    width: 50%;
-    margin-left: 50%;
-    margin-right: -100%;
-    padding-left: 12px;
-    padding-right: 13px;
-  }
-  [dir="rtl"] .layout-4col__second-left-sidebar, [dir="rtl"] .layout-4col__col-2, [dir="rtl"] .layout-4col__col-4, [dir="rtl"] .layout-4col__col-x:nth-child(2n) {
-    float: right;
-    margin-right: 50%;
-    margin-left: -100%;
-  }
-  [dir="rtl"] .layout-4col__second-left-sidebar, [dir="rtl"] .layout-4col__col-2, [dir="rtl"] .layout-4col__col-4, [dir="rtl"] .layout-4col__col-x:nth-child(2n) {
-    padding-left: 13px;
-    padding-right: 12px;
-  }
-}
-
-@media (min-width: 999px) {
-  .layout-4col__full {
-    float: left;
-    width: 100%;
-    margin-left: 0%;
-    margin-right: -100%;
-  }
-  [dir="rtl"] .layout-4col__full {
-    float: right;
-    margin-right: 0%;
-    margin-left: -100%;
-  }
-  .layout-4col__left-content {
-    float: left;
-    width: 66.66667%;
-    margin-left: 0%;
-    margin-right: -100%;
-  }
-  [dir="rtl"] .layout-4col__left-content {
-    float: right;
-    margin-right: 0%;
-    margin-left: -100%;
-  }
-  .layout-4col__right-content {
-    float: left;
-    width: 66.66667%;
-    margin-left: 33.33333%;
-    margin-right: -100%;
-  }
-  [dir="rtl"] .layout-4col__right-content {
-    float: right;
-    margin-right: 33.33333%;
-    margin-left: -100%;
-  }
-  .layout-4col__left-sidebar, .layout-4col__first-left-sidebar, .layout-4col__second-left-sidebar {
-    clear: right;
-    float: right;
-    width: 33.33333%;
-    margin-right: 66.66667%;
-    margin-left: -100%;
-  }
-  [dir="rtl"] .layout-4col__left-sidebar, [dir="rtl"] .layout-4col__first-left-sidebar, [dir="rtl"] .layout-4col__second-left-sidebar {
-    clear: left;
-  }
-  [dir="rtl"] .layout-4col__left-sidebar, [dir="rtl"] .layout-4col__first-left-sidebar, [dir="rtl"] .layout-4col__second-left-sidebar {
-    float: left;
-    margin-left: 66.66667%;
-    margin-right: -100%;
-  }
-  .layout-4col__right-sidebar {
-    clear: right;
-    float: right;
-    width: 33.33333%;
-    margin-right: 0%;
-    margin-left: -100%;
-  }
-  [dir="rtl"] .layout-4col__right-sidebar {
-    clear: left;
-  }
-  [dir="rtl"] .layout-4col__right-sidebar {
-    float: left;
-    margin-left: 0%;
-    margin-right: -100%;
-  }
-  .layout-4col__col-1, .layout-4col__col-x:nth-child(3n+1) {
-    clear: both;
-    float: left;
-    width: 33.33333%;
-    margin-left: 0%;
-    margin-right: -100%;
-  }
-  [dir="rtl"] .layout-4col__col-1, [dir="rtl"] .layout-4col__col-x:nth-child(3n+1) {
-    float: right;
-    margin-right: 0%;
-    margin-left: -100%;
-  }
-  .layout-4col__col-2, .layout-4col__col-x:nth-child(3n+2) {
-    clear: none;
-    float: left;
-    width: 33.33333%;
-    margin-left: 33.33333%;
-    margin-right: -100%;
-  }
-  [dir="rtl"] .layout-4col__col-2, [dir="rtl"] .layout-4col__col-x:nth-child(3n+2) {
-    float: right;
-    margin-right: 33.33333%;
-    margin-left: -100%;
-  }
-  .layout-4col__col-3, .layout-4col__col-x:nth-child(3n) {
-    clear: none;
-    float: left;
-    width: 33.33333%;
-    margin-left: 66.66667%;
-    margin-right: -100%;
-  }
-  [dir="rtl"] .layout-4col__col-3, [dir="rtl"] .layout-4col__col-x:nth-child(3n) {
-    float: right;
-    margin-right: 66.66667%;
-    margin-left: -100%;
-  }
-  .layout-4col__col-4 {
-    display: none;
-  }
 }
 
 .layout-4col__grid-item-container {
@@ -1016,8 +849,7 @@ th {
 }
 
 .layout-center--shared-grid,
-.layout-center.layout-3col,
-.layout-center.layout-4col {
+.layout-center.layout-3col {
   padding-left: 0;
   padding-right: 0;
 }
@@ -1028,7 +860,7 @@ th {
 
 @media (min-width: 555px) {
   .layout-swap {
-    padding-top: 0;
+    padding-top: 48px;
   }
 }
 
@@ -1036,7 +868,7 @@ th {
   .layout-swap__top {
     position: absolute;
     top: 0;
-    height: 0;
+    height: 48px;
     width: 100%;
   }
 }
@@ -1471,13 +1303,15 @@ span.field-label {
 .navbar,
 .main-navigation .links,
 .main-navigation .menu {
-  margin-left: -80px;
   margin-top: 0;
-  width: 120%;
-  padding: 4px 0 4px 80px;
+  left: 0;
+  right: 0;
+  position: absolute;
+  padding: 4px 0 4px 6px;
   text-align: left;
   background: #2b2b2b;
   font-family: "Alegreya", "DejaVu Serif", serif;
+  z-index: 10;
 }
 
 [dir="rtl"] .navbar,
@@ -1501,6 +1335,7 @@ span.field-label {
   border-right-style: solid;
   border-right-width: 1px;
   border-color: gray;
+  cursor: pointer;
 }
 
 .navbar__item a,
