--- a/sites/all/themes/gms_theme/sass/layouts/layout-swap/_layout-swap.scss
+++ b/sites/all/themes/gms_theme/sass/layouts/layout-swap/_layout-swap.scss
@@ -1,6 +1,5 @@
 // The height of the navigation container.
-//$layout-swap-height: 2 * $base-line-height;
-$layout-swap-height: 0;
+$layout-swap-height: 2 * $base-line-height;
 
 // Layout swap
 //
